# SFML-Game-Framework

./: .gitignore  CMakeLists.txt  README.md
cmake_modules/: FindBox2D.cmake
src/: Game.cpp  Input.h  main.cpp
src/GUI/: Textbox.cpp
src/Game/: BaseSystem.h  eCollideObjectGroups.h
src/Game/Components/: Bullet.h  Mob.h  PhysicBody.h  Player.h  Position.h  Sprite.h  Velocity.h  Weapon.h
src/Game/Systems/: BulletCollision.cpp  BulletCollision.h  MobAISystem.cpp  MobAISystem.h  MobBehaviour.cpp  MobBehaviour.h  MoveSystem.cpp  MoveSystem.h  PlayerInput.cpp  PlayerInput.h  PlayerInputSystem.cpp  PlayerInputSystem.h  PlayerMovementInput.cpp  PlayerMovementInput.h  RenderSystem.cpp  RenderSystem.h  SpriteMove.cpp  SpriteMove.h  SpriteRender.cpp  SpriteRender.h
src/States/: StateBase.h  StatePlaying.cpp  StatePlaying.h
src/Util/: Box2dDebugDraw.h
